--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="priyabrata Satpathy profile picture" />
+        <img src="./profile-pic.png" alt="priyabrata Satpathy profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -57,13 +57,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="./linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/priyabrata-satpathy/'"
           />
           <img
-            src="./assets/github.png"
+            src="./github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/satpathy1'"
@@ -86,7 +86,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="./experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -94,7 +94,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="./education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -110,7 +110,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#Skills'"
@@ -126,7 +126,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -137,7 +137,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -148,7 +148,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -164,7 +164,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -175,7 +175,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -186,7 +186,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -200,7 +200,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -214,7 +214,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./project-1.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -238,7 +238,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./project-2.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -288,7 +288,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -300,7 +300,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="./email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -308,7 +308,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="./linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
